<resources>
    <!-- Login -->
    <string name="app_name">Genshin Planner</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="genshin_uid">Genshin UID</string>
    <string name="genshin_main"> Genshin Main</string>
    <string name="save_profile">Save Profile</string>

    <!--  View Profile  -->
    <string name="middle_profile">|</string>
    <string name="sample_username"> howardmalakas</string>
    <string name="sample_UID">803678969</string>
    <string name="sample_email">howard_montecillo@malakas.com</string>
    <string name="character">Characters</string>
    <string name="character_edit">Edit Characters</string>
    <string name="create_plans">Created Plans</string>
    <string name="shared_plans">Shared Plans</string>
    <string name="saved_plans">Saved Plans</string>
    <string name="view_all_plans">View All Plans</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Signout">Signout</string>
    <string name="nunber">8</string>
    <string name="back">Back</string>

    <!-- View Character  -->
    <string name="name">Name: </string>
    <string name="weapon">Weapon: </string>
    <string name="element">Element: </string>
    <string name="rarity">Rarity: </string>
    <string name="ascension_mats">Ascension Materials</string>
    <string name="talent_mats">Talent Materials</string>
    <string name="sample_name">Raiden Shogun</string>
    <string name="sample_weap">Polearm</string>
    <string name="sample_element">Electro</string>
    <string name="sample_stars">5 Stars</string>

    <!-- View Item -->
    <string name="sample_item_name">Crystalline Bloom</string>
    <string name="type">Type: Charcter Ascension Material, Weapon Ascension Materials, Talent Ascension Material</string>
    <string name="obtain">How to Obtain:</string>

    <!-- View Plans -->
    <string name="sample_description">This plan is made for characters such as Raiden Shogun, Sara, Kokomi, Klee, Diluc</string>
    <string name="resin">Resin: </string>
</resources>