<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.RegisterActivity"
    android:backgroundTint="#66000000"
    android:backgroundTintMode="src_over">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/btn_register_saveprofile"
        app:layout_constraintEnd_toStartOf="@+id/gl_right_main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_left_main"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/label_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/full_name"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_register_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:hint="@string/full_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email_address"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_register_emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:hint="@string/email_address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:hint="@string/username"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/label_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/genshin_uid"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_register_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:hint="@string/genshin_uid"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/label_genshin_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/genshin_main"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:background="@drawable/shape_rounded_rectangle"
            android:layout_height="20dp">

            <Spinner
                android:id="@+id/spinner_register_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:spinnerMode="dialog" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/gl_left_main"
        app:layout_constraintTop_toTopOf="@id/gl_top_main" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bot_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <Button
        android:id="@+id/btn_register_saveprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9401"
        android:backgroundTint="#FF9401"
        android:text="@string/save_profile"
        app:iconTint="#FF9401"
        app:layout_constraintBottom_toTopOf="@+id/gl_bot_main"
        app:layout_constraintEnd_toStartOf="@+id/gl_right_main"
        app:layout_constraintStart_toStartOf="@+id/gl_left_main" />

    <Button
        android:id="@+id/btn_register_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Delete Profile"
        app:layout_constraintEnd_toStartOf="@+id/gl_right_main"
        app:layout_constraintStart_toStartOf="@+id/gl_left_main"
        app:layout_constraintTop_toTopOf="@+id/gl_bot_main"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>